assets/css/main.css
/*
 http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

*/

body {
  background-color: white;
}

* {
  font-family: lato;
  font-weight: 400;
}

/* used to style main logo*/



.jumbotron {
  margin: 0;
}

.highlight {
  background-color: #1b75bb;
  color: white;
  mix-blend-mode: multiply;
  text-transform: uppercase;
  margin: 100px auto;
  padding: 20px;
  opacity: 0.9;
  transition: opacity 0.5s ease;
}

.highlight:hover {
  opacity: 1.0;
  cursor: pointer;
}

.calendar {
  background-color: lightgrey;
  padding: 2px;
  margin: 4px 2px;
  transition: background-color 0.5s ease
}

.calendar h2 {
  color: #1c415f;
  margin: 10px;
}

.calendar:hover {
  background-color: white;
}

@media screen and (max-width: 533px) {
  .highlight {
      mix-blend-mode: unset;
      background-color: #1c415f;
  }
}

.title {
  background-color: #1c415f;
  padding: 30px;
  color: white;
}

#box-wrapper {
  background-image: url(../img/temp_marimba2.png);
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 900px;
}

.footer {
    padding: 30px;
}

.navbar {
  box-shadow: 0 8px 6px -6px #999;
}

.btn-primary, .btn-lg {
  border-radius: 0;
}

